--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='%233b82f6' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Ccircle cx='12' cy='12' r='10'/%3E%3Cpolyline points='12 6 12 12 16 14'/%3E%3C/svg%3E" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Round Robin Scheduler</title>
+    <title>Schedulix | Interactive CPU Scheduling Simulator</title>
+
+    <meta name="description" content="A modern, high-fidelity simulator for CPU scheduling algorithms including Round Robin, FCFS, and SJF. Perfect for educational purposes." />
+
   </head>
   <body>
     <div id="root"></div>
