Add favicon and reference in index.html

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Schedulix | Interactive CPU Scheduling Simulator</title>
 
+    <link rel="icon" href="/favicon.svg" />
+    <link rel="apple-touch-icon" href="/favicon.svg" />
+    <meta name="theme-color" content="#0ea5a4" />
+
     <meta name="description" content="A modern, high-fidelity simulator for CPU scheduling algorithms including Round Robin, FCFS, and SJF. Perfect for educational purposes." />
 
   </head>
