--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -9,8 +9,10 @@
     <link rel="apple-touch-icon" href="/favicon.svg" />
     <meta name="theme-color" content="#0ea5a4" />
 
-    <meta name="description" content="A modern, high-fidelity simulator for CPU scheduling algorithms including Round Robin, FCFS, and SJF. Perfect for educational purposes." />
-
+    <meta
+      name="description"
+      content="A modern, high-fidelity simulator for CPU scheduling algorithms including Round Robin, FCFS, and SJF. Perfect for educational purposes."
+    />
   </head>
   <body>
     <div id="root"></div>
