--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
 
     <link rel="icon" href="/favicon.svg" />
     <link rel="apple-touch-icon" href="/favicon.svg" />
-    <meta name="theme-color" content="#0ea5a4" />
+    <meta name="theme-color" content="#05070a" />
 
     <meta
       name="description"
